lots of updates

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,133 +1,4 @@
 ---
-# Feel free to add content and custom Front Matter to this file.
-# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 permalink: /
-layout: default
+layout: home
 ---
-
-<div class="main-content">
-    <div class="container-fluid">
-        <div id="bannertext">
-            <div class="card indexcard">
-                <p id="bannertext">
-                    Checkout the <a href='/tie/'>TIE</a> (Today I Explored): posts of the topics
-                    in Computer Science and/or Mathematics that I focused on each day.</p>
-            </div>
-
-        </div>
-    </div>
-
-    <div id="typesofevents" class="carousel slide" data-bs-ride="carousel"
-        style="background-color: white; border-radius: 10px;">
-        <div class="display-6 mt-4 py-0 px-3 ">
-            <h3 style=" font-size: 0.8em; font-weight: 500; color: black; text-align: center;">Our Events </h3>
-        </div>
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#typesofevents" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#typesofevents" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#typesofevents" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#typesofevents" data-bs-slide-to="3" aria-label="Slide 4"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div class="row mb-4">
-                    <div class="col-md-2">
-                    </div>
-                    <div class="col-md-4 p-3">
-                        <img src="/assets/img/about/rendezvous.jpg" class="d-block mx-auto mt-4"
-                            style="max-height: 400px;" alt="...">
-                    </div>
-                    <div class="col-md-4 p-3">
-                        <div style="width: 95%; height: 440px;">
-                            <h2 style="margin-bottom: 10px; font-weight: 700; padding-top: 20px;">Rendezvous</h2>
-                            <h5 style="  text-align: justify; text-justify: inter-word;">In these sessions we invite
-                                researchers and host a lively dialogue between students and the speakers. The
-                                conversation often begins around a central scientific theme in an informal and
-                                comfortable setting. We encourage students to ask questions, which bring out more
-                                elaborate perspectives from the discussion. </h5>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="row mb-4">
-                    <div class="col-md-2">
-                    </div>
-                    <div class="col-md-4 p-3">
-                        <img src="/assets/img/about/interactive_session.jpg" class="d-block mx-auto mt-4"
-                            style="max-height: 400px;" alt="...">
-                    </div>
-                    <div class="col-md-4 p-3">
-                        <div style="width: 95%; height: 440px;">
-                            <h2 style="margin-bottom: 10px; font-weight: 700; padding-top: 20px;">Interaction</h2>
-                            <h5 style="  text-align: justify; text-justify: inter-word;">Here we invite researchers and
-                                have free-flowing conversations with them on a variety of topics. For example, we try to
-                                understand the problems certain sections of our society are facing and how we can try to
-                                solve them. We also talk about their impressions and experiences throughout their
-                                journey in academia. </h5>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="row mb-4">
-                    <div class="col-md-2">
-                    </div>
-                    <div class="col-md-4 p-3">
-                        <img src="/assets/img/about/counselling.png" class="d-block mx-auto mt-4"
-                            style="max-height: 400px;" alt="...">
-                    </div>
-                    <div class="col-md-4 p-3">
-                        <div style="width: 95%; height: 440px;">
-                            <h2 style="margin-bottom: 10px; font-weight: 700; padding-top: 20px;">Counselling sessions
-                            </h2>
-                            <h5 style="  text-align: justify; text-justify: inter-word;">In these sessions we invite
-                                some of our professors and students to talk about the various opportunities presented by
-                                the institute, and how the students can best utilize them. In other such sessions with
-                                our alumni we also discuss the life ahead of our Integrated MSc program. </h5>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="row mb-4">
-                    <div class="col-md-2">
-                    </div>
-                    <div class="col-md-4 p-3">
-                        <img src="/assets/img/about/open_mic.jpg" class="d-block mx-auto mt-4"
-                            style="max-height: 400px;" alt="...">
-                    </div>
-                    <div class="col-md-4 p-3">
-                        <div style="width: 95%; height: 440px;">
-                            <h2 style="margin-bottom: 10px; font-weight: 700; padding-top: 20px;">Open Mic</h2>
-                            <h5 style="font-size: 1.25em; text-align: justify; text-justify: inter-word;">Open Mics
-                                provide students with an opportunity to explore their scientific interests and share
-                                them with the community. The session begins with 5-6 students briefly introducing a
-                                topic of their interest. This is followed by a discussion session, where the speakers
-                                elaborate on their topic with smaller groups of students in greater depth. </h5><br>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#typesofevents" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#typesofevents" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-        <hr style="margin:15px;">
-    </div>
-
-</div
