changing the look again :)

--- a/_posts/2021-11-05-nlp_models_ngrams.html
+++ b/_posts/2021-11-05-nlp_models_ngrams.html
@@ -1,5 +1,5 @@
 ---
-layout: repos
+layout: post
 date: November 11, 2021
 title: "NLP: Creating Language Models using ngrams"
 categories: cs nlp modeling
