--- a/_posts/2021-11-05-nlp_models_ngrams.html
+++ b/_posts/2021-11-05-nlp_models_ngrams.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: post1
 date: November 11, 2021
 title: "NLP: Creating Language Models using ngrams"
 categories: cs nlp modeling
@@ -7,4 +7,5 @@ categories: cs nlp modeling
 
 <div>
     <h4>Building Language Model with ngrams in Python</h4>
+    <p> Under Construction</p>
 </div>
