been way to long for new TIE

--- a/_posts/2021-12-02-version-control.html
+++ b/_posts/2021-12-02-version-control.html
@@ -6,14 +6,15 @@ categories:
 ---
 
 <div>
-    <h2 style="text-align: center; color:#284253;">Really Commiting to Version Control</h2>
+    <h2 style="text-align: center; color:#284253;">Really Commiting to Version Control and Being a Part
+        of a Development Team</h2>
 
 
     <p> If all is well with the universe, every engineer experiences being a member of a great team at
         one point in their career. A team
-        where everyone is vested and contributes. At this point, the old way of doing most of
-        the work on your own to then upload and share
-        with others before the presentation is no longer acceptable. It is time for version control.</p>
+        where everyone is vested and contributes. At this point, most will find that
+        working tirelessly generating massive lines of code in isolation is no longer optimal. It is time for version
+        control.</p>
 
     <div class="container-fluid">
 
@@ -35,9 +36,9 @@ categories:
         <a href="https://www.agilealliance.org">agile</a> and <a href="https://www.devops.com">devops</a>
         principles as part of their workflow protocol and governance because
         the systems they are creating WILL be the result of the entire team's
-        efforts. Collaborate with others (or going solo) on a large scale project takes more than
-        programming muscle. There is a real need to be strategic, have a plan and
-        use the plan. Enter Version Control.
+        efforts. Collaborating with others (or going solo) on a large scale project takes more than
+        programming muscle. There is a real need to be strategic, flexible, to have and use a plan. Enter Version
+        Control.
     </p>
 
     <p>I learned many of the following points while in school and
@@ -138,7 +139,7 @@ categories:
             <p>
                 Even if you are remote, maybe especially if you are remote, make an effort to communicate with the
                 whole
-                team on your progress and issues. Please do not have an ego, meaning ask for help when you
+                team on your progress and issues. Forgo any ego, meaning ask for help when you
                 have hit a wall and give help without in a constructive way. I enjoy the flow of sending quick
                 messages
                 or emojis, but I still enjoy hearing another human voice to remind me that my teammates are not just
